--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kiali/kiali-ui",
+  "proxy": "http://172.18.255.200/kiali",
   "version": "1.70.0",
   "description": "React UI for [Kiali](https://github.com/kiali/kiali).",
   "keywords": [
