--- a/package.json
+++ b/package.json
@@ -40,12 +40,6 @@
     "build:dev": "sh -ac '. ./.env.upstream; npm run lint && npm run build:kiali'",
     "build:kiali": "npm run build-css && REACT_APP_VERSION=$npm_package_version REACT_APP_NAME=$npm_package_name REACT_APP_GIT_HASH=$(git rev-parse HEAD) GENERATE_SOURCEMAP=false EXTEND_ESLINT=true react-scripts build --profile",
     "build:prod": "sh -ac '. ./.env.downstream; npm run build:kiali'",
-    "precypress:run:junit": "npm run cypress:delete:reports",
-    "cypress": "cypress open",
-    "cypress:run": "cypress run -e TAGS=\"not @crd-validation\" && cypress run -e TAGS=\"@crd-validation\"",
-    "cypress:run:junit": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json -e TAGS=\"not @crd-validation\" && cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json -e TAGS=\"@crd-validation\"",
-    "cypress:delete:reports": "rm cypress/results/* || true",
-    "cypress:combine:reports": "jrm cypress/results/combined-report.xml \"cypress/results/*.xml\"",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:precommit": "if git diff --name-only HEAD | grep -E '\\.tsx?$'; then npm run lint; else true; fi",
     "lintfix": "eslint --ext js,ts,tsx --fix src",
@@ -53,7 +47,6 @@
     "start:dev": "sh -ac '. ./.env.upstream; npm run start:kiali'",
     "start:kiali": "npm run build-css && REACT_APP_VERSION=$npm_package_version REACT_APP_NAME=$npm_package_name REACT_APP_GIT_HASH=$(git rev-parse HEAD) react-scripts start",
     "start:prod": "sh -ac '. ./.env.downstream; npm run start:kiali'",
-    "test": "npm run build-css && tsc -p . && TEST_RUNNER=1 react-scripts test --env=jsdom __tests__",
     "prettier": "prettier --write \"{src/**/*.{js,jsx,ts,tsx,json,yml,css,scss},travis.yml,*.json}\""
   },
   "dependencies": {
@@ -78,16 +71,16 @@
     "micro-memoize": "4.0.9",
     "moment": "^2.29.4",
     "postcss-normalize": "10.0.1",
-    "react": "^17.0.1",
+    "react": "^16.13.1",
     "react-ace": "9.1.3",
     "react-copy-to-clipboard": "5.x",
     "react-datepicker": "3.8.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.13.1",
     "react-flexview": "4.0.3",
     "react-redux": "7.2.2",
     "react-resize-detector": "3.4.0",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router": "^5.x",
+    "react-router-dom": "^5.x",
     "react-virtualized": "^9.21.1",
     "redux": "4.0.3",
     "redux-persist": "5.10.0",
@@ -104,35 +97,19 @@
     "visibilityjs": "2.0.2"
   },
   "devDependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^12.2.0",
-    "@cypress/browserify-preprocessor": "3.0.2",
     "@types/cytoscape": "3.14.0",
-    "@types/enzyme": "3.10.5",
-    "@types/jest": "23.3.10",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.169",
     "@types/node": "12.12.14",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/react-redux": "7.1.7",
-    "@types/react-router-dom": "5.1.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "axios-mock-adapter": "1.16.0",
-    "cypress": "^10.7.0",
-    "cypress-multi-reporters": "^1.6.0",
-    "cypress-react-selector": "^2.3.17",
-    "enzyme": "3.11.0",
-    "enzyme-to-json": "3.4.4",
+    "@types/react-router-dom": "^5.x",
     "husky": "1.3.1",
-    "jest-canvas-mock": "2.2.0",
-    "jest-localstorage-mock": "2.4.2",
-    "junit-report-merger": "^3.0.5",
-    "mocha-junit-reporter": "^2.0.2",
     "node-sass": "^7.0.1",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
     "react-scripts": "^5.0.1",
-    "redux-mock-store": "1.5.4",
     "typescript": "4.6.4"
   },
   "resolutions": {
@@ -142,25 +119,12 @@
     "nth-check": "^2.0.1",
     "postcss": "^8.4.12"
   },
-  "engines": {
-    "node": "^14.17.0",
-    "npm": ">=6.0.0 ",
-    "yarn": ">=1.0.0 "
-  },
   "sassIncludes": {
     "src": "src"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run pretty-quick --staged --pattern \"{frontend/src/**/*.{js,jsx,ts,tsx,json,yml,css,scss},travis.yml,*.json}\" && npm run lint:precommit"
-    }
   },
   "browserslist": [
     ">10%",
     "last 2 versions",
     "not ie <= 11"
-  ],
-  "cypress-cucumber-preprocessor": {
-    "stepDefinitions": "cypress/integration/**/*.{js,ts}"
-  }
+  ]
 }
