--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
     "react-scripts": "^5.0.1",
-    "typescript": "4.6.4"
+    "typescript": "^4.0.3"
   },
   "resolutions": {
     "async": "^3.2.2",
