--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@types/cytoscape": "3.14.0",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.169",
-    "@types/node": "12.12.14",
+    "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "7.1.7",
