install ghost dependency package

--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "@patternfly/patternfly": "4.179.1",
     "@patternfly/react-charts": "6.51.5",
     "@patternfly/react-core": "4.198.5",
+    "@patternfly/react-icons": "4.49.5",
     "@patternfly/react-styles": "4.48.5",
     "@patternfly/react-table": "4.67.5",
     "@patternfly/react-tokens": "4.50.5",
+    "ace-builds": "1.4.6",
     "axios": "0.21.4",
     "bootstrap-slider-without-jquery": "10.0.0",
     "cy-node-html-label": "2.0.0",
